# rapr

./: .editorconfig  .gitignore  .release-plz.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  OWNER_MAINTAINERS.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  discussion.md  feature_request.md  minor-patch-release.md  proposal.md  question.md
.husky/: pre-commit
crates/apis/: Cargo.toml  README.md
crates/apis/src/: lib.rs
crates/apis/src/common/: mod.rs  name_value.rs  scoped.rs
crates/apis/src/components/: mod.rs
crates/apis/src/components/v1alpha1/: types.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs
crates/contributes/: Cargo.toml  README.md
crates/contributes/src/: lib.rs
crates/k8s/: Cargo.toml
crates/k8s-apis/: Cargo.toml
crates/k8s/src/: lib.rs  main.rs
crates/raprd/: Cargo.toml  README.md
crates/raprd/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  meta.rs
crates/runtime/tests/: uds_tcp_grpc_integration.rs
crates/sample/: Cargo.toml  README.md
crates/sample/src/: lib.rs
docs/: go-rust-kube-api.md
examples/uds_tcp_grpc/: Cargo.toml  build.rs
examples/uds_tcp_grpc/src/: tcp_client.rs  tcp_server.rs  uds_client.rs  uds_server.rs
src/: lib.rs  utils.rs
