[package]
name = "takulatech-rapr"
version = "0.0.1"
description = "Distributed Toolkit for Building Performant Secure Reliable Distributed System."
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
include = ["src/**/*", "Cargo.toml"]

[profile.release]
# more aggressive, and may improve performance and reduce binary size further while increasing build times
lto = "fat"
codegen-units = 1
# we're long alive game server who better prefer unwind to panic = "abort"
panic = "unwind"

[dependencies]
snafu = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
workspace = true

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
homepage = "todo"
license = "MIT OR Apache-2.0"
categories = ["data", "pipeline"]
repository = "todo"
documentation = "todo"
# - Used by crates.io to display the README on the package's page
# - Shows up on the package's GitHub repository
# - Does NOT include the README content in the generated rustdoc
# - Does NOT allow running doc-tests from the README
readme = "README.md"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[workspace.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

[workspace.dependencies]
######## [datapipeline-dependencies] ########

# [target.'cfg(or(target_arch = "macOS"),target_arch = "linux")'.workspace.dependencies]
# #[global_allocator]
# static GLOBAL: tikv_jemallocator::Jemalloc = tikv_jemallocator::Jemalloc;
# on Linux, jemalloc can be configured to use transparent huge pages (THP).
# This can further speed up programs, possibly at the cost of higher memory usage.
# MALLOC_CONF="thp:always,metadata_thp:always" cargo build --release
tikv-jemallocator = "0.6.0"

snafu = { version = "0.8" }
serde = { version = "1", default-features = false }
serde_derive = { version = "1", default-features = false }
serde_json = "1.0"
uuid = { version = "1.13.1", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }

######## [dev-dependencies] ########
