
[package]
name = "rapr"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
publish.workspace = true
[lints]
workspace = true
[package.metadata.docs.rs]
workspace = true
[dev-dependencies]
[dependencies]
snafu.workspace = true
serde.workspace = true

[workspace.package]
authors = ["Takula Technology <talulatech@gmail.com>"]
description = "Distributed Toolkit for Building Performant Secure Reliable Distributed System."
repository = "https://github.com/takula-tech/rapr"
homepage = "https://talulatech.net/rapr/docs"
categories = ["service-mesh", "distributed system"]
keywords = ["service-mesh", "distributed system", "distributed"]
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
documentation = ""
readme = "README.md"
publish = false

[workspace]
members = ["crates/*"]

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[workspace.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

[workspace.dependencies]
######[rapr-crate-dependencies]######
rapr = { path = ".", default-features = true, version = "0.0.1" }
rapr-apis = { path = "crates/apis", default-features = true, version = "0.0.1" }
rapr-runtime = { path = "crates/runtime", default-features = true, version = "0.0.1" }
rapr-contributes = { path = "crates/contributes", default-features = true, version = "0.0.1" }
######## [dev-dependencies] ########
######## [dependencies] ########
# [target.'cfg(or(target_arch = "macOS"),target_arch = "linux")'.workspace.dependencies]
# #[global_allocator]
# static GLOBAL: tikv_jemallocator::Jemalloc = tikv_jemallocator::Jemalloc;
# on Linux, jemalloc can be configured to use transparent huge pages (THP).
# This can further speed up programs, possibly at the cost of higher memory usage.
# MALLOC_CONF="thp:always,metadata_thp:always" cargo build --release
tikv-jemallocator = "0.6"
mimalloc = { version = "0.1", default-features = true }
snafu = "0.8"
serde = { version = "1.0", default-features = true, features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
arrayvec = "0.7"
kube = "1.1"
k8s-openapi = { version = "0.25", features = ["v1_30"] }
