[package]
name = "rapr-k8s-apis"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true

[badges]
maintenance = { status = "actively-developed" }
[lints]
workspace = true
[package.metadata.docs.rs]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]

[features]
default = []
